# Web-Based-Image-Classification-with-CIFAR-10-Datase

./: .dockerignore  .gitignore  Dockerfile  Project presentations – IRecognition.pptx  README.md  pyproject.toml  requirements.txt
irecognition/: .env.example  manage.py
irecognition/imagerecognition/: forms.py  predict.py  read_model.py  test_prediction.py  urls.py  views.py
irecognition/imagerecognition/static/css/: image_upload.css
irecognition/imagerecognition/templates/imagerecognition/: image_upload.html  prediction_result.html
irecognition/imagerecognition/templatetags/: base64_filters.py
irecognition/irecognition/: asgi.py  settings.py  urls.py  wsgi.py
irecognition/mainpage/: admin.py  forms.py  messages_for_visiters.py  models.py  tasks.py  urls.py  views.py
irecognition/mainpage/migrations/: 0001_initial.py  0002_remove_image_image_id_image_image_and_more.py  0003_remove_statistics_hours_active_and_more.py  0004_alter_statistics_default_date.py  0005_remove_statistics_default_date.py  0006_remove_image_user_id.py
irecognition/mainpage/static/css/: main.css
irecognition/mainpage/templates/mainpage/: base.html  main.html
irecognition/static/: staticfiles.json
irecognition/static/css/: main.00aa379f4169.css  main.0da91bdf44b1.css  main.1e54be82ab57.css  main.b43f13da9cf1.css  main.c7ecd06cdb2a.css
irecognition/users/: backends.py  forms.py  models.py  test_users.py  urls.py  views.py
irecognition/users/migrations/: 0001_initial.py
irecognition/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
train_models/: CIFAR_10_Classifier.ipynb
