[tool.poetry]
name = "web-based-image-classification-with-cifar-10-datase"
version = "0.1.0"
description = ""
authors = ["Ihor Voitiuk"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
tensorflow = "^2.13.0"
django = "4.1"
gdown = "^4.7.1"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
